--- a/module1/LapTrinhCoban/New folder/sd.html
+++ b/module1/LapTrinhCoban/New folder/sd.html
@@ -10,17 +10,24 @@
 </div>
 
 <script>
-    var x = [1,3,5,8];
-
-    for (var i=0; i<x.length; i++)
-    {
-        if(x[i] > 4)
-        {
-            x[i] = 0;
+    let arr=[36,11,2,4,4,5,6,10,8,-12];
+    let n=arr.length;
+    let mang=0;
+    for(let i=0;i<n;i++){
+        for(let j=0;j<n;i++){
+            if(i<j){
+                if(arr[i]+arr[j]===k){
+                    mang++
+                }
+                console.log(mang)
+            }
         }
     }
 
-    console.log(x);;
+
+
+
+
 
 </script>
 </body>
