--- a/module1/CaseStudy/YeuCau7/giaoDien.html
+++ b/module1/CaseStudy/YeuCau7/giaoDien.html
@@ -7,19 +7,20 @@
         .timKiem{
             width: 100%;
             height: 100px;
-            background-color: #9d66cd;
+            background-color: #2f4b26;
             text-align: center;
+            color: #dddddd;
 
         }
         .headLine{
             width: 100%;
             height: 60px;
-            background-color: whitesmoke;
+            background-color: #3e885b;
         }
         .left{
             width: 15%;
             height: 500px;
-            background-color: #ff4a1a;
+            background-color: #85bda6;
             float:left;
             text-align: center;
 
@@ -27,14 +28,14 @@
         .right{
             width: 85%;
             height: 500px;
-            background-color: #50af50;
+            background-color: #bedcfe;
             float: left;
         }
         .bottom{
             width: 100%;
             height:80px;
             float: right;
-            background-color: #2196F3;
+            background-color: #3e885b;
         }
         table{
             width: 100%;
