--- a/module1/OOP2/BaiTap/BTCo.html
+++ b/module1/OOP2/BaiTap/BTCo.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <title>Phát triển trò chơi cờ ca-ro</title>
     <style>
-        table,tr,td{
+        table, tr, td {
             border: solid 1px black;
         }
-        td{
+
+        td {
             width: 30px;
             height: 30px;
         }
@@ -16,102 +17,103 @@
 <body>
 <p id="oBanCo"></p>
 <script>
-  let  arrBanCo=[];
-  for (let i=0;i<25;i++){
-      arrBanCo[i]=[];
-      for (let j=0;j<25;j++){
-          arrBanCo[i][j]='';
-      }
-  }
-  function displayBanCo(mang){
-      let data='';
-      data+='<table>';
-      for (let i=0;i<20;i++)
-      {
-          data+='<tr>';
-          for (let j=0;j<20;j++){
-              data+='<td>';
-              data+='<p onclick="clickO('+i+','+j+')">'+mang[i][j]+'</p>';
-              data+='</td>'
-          }
-          data+='</tr>'
-      }
-      data+='</table>'
-      document.getElementById('oBanCo').innerHTML=data;
-  }
-  displayBanCo(arrBanCo);
-  class NguoiChoi{
-      constructor(trangThai,dauTich,oChonX,oChonY) {
-          this._trangThai = trangThai;
-          this._dauTich = dauTich;
-          this._oChonX = oChonX;
-          this._oChonY = oChonY;
-      }
+    let arrBanCo = [];
+    for (let i = 0; i < 25; i++) {
+        arrBanCo[i] = [];
+        for (let j = 0; j < 25; j++) {
+            arrBanCo[i][j] = '&nbsp';
+        }
+    }
 
-      get oChonY() {
-          return this._oChonY;
-      }
+    function displayBanCo(mang) {
+        let data = '';
+        data += '<table>';
+        for (let i = 0; i < 20; i++) {
+            data += '<tr>';
+            for (let j = 0; j < 20; j++) {
+                data += '<td>';
+                data += '<p onclick="clickO(' + i + ',' + j + ')">' + mang[i][j] + '</p>';
+                data += '</td>'
+            }
+            data += '</tr>'
+        }
+        data += '</table>'
+        document.getElementById('oBanCo').innerHTML = data;
+    }
 
-      set oChonY(value) {
-          this._oChonY = value;
-      }
+    displayBanCo(arrBanCo);
 
-      get trangThai() {
-          return this._trangThai;
-      }
+    class NguoiChoi {
+        constructor(trangThai, dauTich, oChonX, oChonY) {
+            this._trangThai = trangThai;
+            this._dauTich = dauTich;
+            this._oChonX = oChonX;
+            this._oChonY = oChonY;
+        }
 
-      set trangThai(value) {
-          this._trangThai = value;
-      }
+        get oChonY() {
+            return this._oChonY;
+        }
 
-      get dauTich() {
-          return this._dauTich;
-      }
+        set oChonY(value) {
+            this._oChonY = value;
+        }
 
-      set dauTich(value) {
-          this._dauTich = value;
-      }
+        get trangThai() {
+            return this._trangThai;
+        }
 
-      get oChonX() {
-          return this._oChonX;
-      }
+        set trangThai(value) {
+            this._trangThai = value;
+        }
 
-      set oChonX(value) {
-          this._oChonX = value;
-      }
-      checkTrangThai(){
-          if(arrBanCo[this.oChonX][this.oChonY]!==''){
-              alert("đã có người tích rồi");
-              this.trangThai= !this.trangThai
-          }
+        get dauTich() {
+            return this._dauTich;
+        }
 
-      }
-      tichO(x,y){
-          this.checkTrangThai();
-          if(!this.trangThai){
-              this.oChonX=x;
-              this.oChonY=y;
-              arrBanCo[this.oChonX][this.oChonY]=this.dauTich;
-          }else this.tichO(x,y)
-      }
-      chienThang(){
+        set dauTich(value) {
+            this._dauTich = value;
+        }
 
-      }
-  }
-  let nguoiChoi1=new NguoiChoi(true,'X');
-  let nguoiChoi2=new NguoiChoi(false,'O');
-  function choiCo() {
+        get oChonX() {
+            return this._oChonX;
+        }
 
-      do {
-          nguoiChoi1.tichO(a,b);
-          nguoiChoi2.tichO(a,b);
-      }while (nguoiChoi1.chienThang()||nguoiChoi2.chienThang())
+        set oChonX(value) {
+            this._oChonX = value;
+        }
 
-  }
-  let a=0;
-  let b=0;
+        tichO(x, y,z) {
 
-choiCo()
+            if (arrBanCo[x][y] !== '&nbsp') {
+                alert("đã có người tích rồi");
+            }
+           else {
+                this.oChonX = x;
+                this.oChonY = y;
+                arrBanCo[this.oChonX][this.oChonY] = this.dauTich;
+                this.trangThai = !this.trangThai;
+                z.trangThai=true;
+            }
+
+            displayBanCo(arrBanCo)
+
+        }
+
+        chienThang() {
+
+        }
+    }
+
+    let nguoiChoi1 = new NguoiChoi(true, 'X');
+    let nguoiChoi2 = new NguoiChoi(false, 'O');
+
+    function clickO(x, y) {
+        if (nguoiChoi1.trangThai) {
+            nguoiChoi1.tichO(x, y,nguoiChoi2)
+        }else nguoiChoi2.tichO(x, y,nguoiChoi1);
+
+    }
 </script>
 </body>
 </html>
