--- a/module1/CaseStudy/YeuCau3/bai2.html
+++ b/module1/CaseStudy/YeuCau3/bai2.html
@@ -10,7 +10,7 @@
     let arr2 = [];
     let khac=[];
     for (let i=0;i<6;i++){
-        let nhap=prompt("nhập vào phần tử thứ ["+i+"] của mảng A:")
+        let nhap=prompt("nhập vào phần tử thứ ["+i+"] của mảng A:");
         if(parseInt(nhap)-nhap!==0){
             alert("chỉ được nhập số nguyên");
             i--;
@@ -19,7 +19,7 @@
     arr.push(nhap);
     }
     for (let i=0;i<9;i++){
-        let nhap=prompt("nhập vào phần tử thứ ["+i+"] của mảng B:")
+        let nhap=prompt("nhập vào phần tử thứ ["+i+"] của mảng B:");
         if(parseInt(nhap)-nhap!==0){
             alert("chỉ được nhập số nguyên");
             i--;
