--- a/module1/CaseStudy/YeuCau1/bai4.html
+++ b/module1/CaseStudy/YeuCau1/bai4.html
@@ -11,7 +11,7 @@
     for (let i = 0; i < x; i++) {
         for (let j = 0; j < (2 * x - 1); j++) {
             if (i < x - 1) {
-                if ((giua - j == i) || (j - giua == i)) {
+                if ((giua - j === i) || (j - giua === i)) {
                     document.write("*");
                 } else {
                     document.write("&nbsp&nbsp");
