--- a/module1/CaseStudy/YeuCau3/bai1.html
+++ b/module1/CaseStudy/YeuCau3/bai1.html
@@ -10,7 +10,7 @@
     let n = prompt("nhập độ dài của mảng");
     for (let i=0;i<n;i++) {
         let nhap = prompt("nhập vào số nguyên");
-        if (parseInt(nhap) - nhap != 0) {
+        if (parseInt(nhap) - nhap !==0) {
             alert("bạn phải nhập số nguyên ");
             i--;
             continue
