--- a/module3/06_css_cascading_style_stylesheet/exercuse/create_page_to_read_book/Main.html
+++ b/module3/06_css_cascading_style_stylesheet/exercuse/create_page_to_read_book/Main.html
@@ -26,7 +26,7 @@
                         Hay</h5></a></li>
                     <li  class="menuitem"><a href="kiem-hiep-hay.html" title="Kiếm Hiệp Hay"><h5>Kiếm Hiệp
                         Hay</h5></a></li>
-                    <li  class="menuitem"><a href="tien-hiep-hay.html" title="Truyện Teen Hay"><h5>Truyện
+                    <li  class="menuitem"><a href="#" title="Truyện Teen Hay"><h5>Truyện
                         Teen Hay</h5></a></li>
                     <li  class="menuitem"><a href="tien-hiep-hay.html" title="Ngôn Tình Hay"><h5>Ngôn Tình
                         Hay</h5></a></li>
