--- a/module3/07_websiste_layout_design/exercise/creating_layouts_with_RWd/index.html
+++ b/module3/07_websiste_layout_design/exercise/creating_layouts_with_RWd/index.html
@@ -4,50 +4,89 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="../../../bootstrap-5.0.1-dist/css/bootstrap.css">
+    <script src="../../../jquery/jquery-3.6.0.min.js"></script>
+    <script src="../../../bootstrap-5.0.1-dist/js/bootstrap.js"></script>
+
 </head>
 <body>
-<header>
-    <ul>
-        <li><a>News</a></li>
-        <li><a>Sports</a></li>
-        <li><a>Weather</a></li>
-        <li><a>Words</a></li>
-        <li><a>Sport</a></li>
-        <li><a>Game</a></li>
-    </ul>
-</header>
-<div class="left">
-    <nav>
-        <ul>
-            <li><a>Link</a></li>
-            <li><a>Link</a></li>
-            <li><a>Link</a></li>
+<div class="container-fluid fixed-top p-0">
+    <header>
+        <div class="row">
+            <div class="col-12">
+                    <nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-between">
+                        <div class="d-flex">
+                            <a class="navbar-brand" href="#">Navbar</a>
+                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                                <div class="navbar-nav">
+                                    <a class="nav-link active" aria-current="page" href="#">News</a>
+                                    <a class="nav-link" href="#">Sports</a>
+                                    <a class="nav-link" href="#">Weather</a>
+                                    <a class="nav-link" href="#">Weather</a>
+                                    <a class="nav-link" href="#">Weather</a>
 
-        </ul>
-    </nav>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="d-none text-light px-2 d-xl-flex">
+                            <nav class="navbar align-content-end navbar-dark ">
+                                <p>Sign in <i
+                                        class="fas fa-user-plus"></i></p>
+                            </nav>
+                        </div>
+                    </nav>
+                </div>
+
+            </div>
+
+    </header>
+</div>
+<div class="container-fluid pt-5 mt-5">
+    <div class="row position-relative ">
+        <div class="bg-secondary col-xl-3 col-md-3 col-12  ">
+            <ul class="list-group text-center">
+                <li class="list-group-item-secondary ">An item</li>
+                <li class="list-group-item-secondary">A second item</li>
+                <li class="list-group-item-secondary">A third item</li>
+                <li class="list-group-item-secondary">A fourth item</li>
+                <li class="list-group-item-secondary">And a fifth one</li>
+            </ul>
+
+        </div>
+        <div class="col-xl-6 col-md-9 btn-light">
+            <section>
+                <h2>News Section</h2>
+                <article>
+                    <h2>News Article</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque in porta lorem. Morbi condimentum est nibh, et consectetur tortor feugiat at.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque in porta lorem. Morbi condimentum est nibh, et consectetur tortor feugiat at.</p>
+                </article>
+                <article>
+                    <h2>News Article</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque in porta lorem. Morbi condimentum est nibh, et consectetur tortor feugiat at.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque in porta lorem. Morbi condimentum est nibh, et consectetur tortor feugiat at.</p>
+                </article>
+            </section>
+        </div>
+        <div class="col-xl-3 col-md-12 col-12 bg-secondary">
+            <aside class="row">
+                <div class="col-12 w-100 p-5 text-center"> <p>qc1</p></div>
+                <div class="col-12 w-100 p-5 text-center"> <p>qc2</p></div>
+            </aside>
+        </div>
+    </div>
+
+</div>
+<div class="container-fluid fixed-bottom">
+    <footer class="py-2 bg-dark text-light text-center " >
+        <p>&copy; 2014 Monday Times. All rights reserved.</p>
+    </footer>
 </div>
 
-<section>
-    <h2>News Section</h2>
-    <article>
-        <h2>News Article</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque in porta lorem. Morbi condimentum est nibh, et consectetur tortor feugiat at.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque in porta lorem. Morbi condimentum est nibh, et consectetur tortor feugiat at.</p>
-    </article>
-    <article>
-        <h2>News Article</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque in porta lorem. Morbi condimentum est nibh, et consectetur tortor feugiat at.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque in porta lorem. Morbi condimentum est nibh, et consectetur tortor feugiat at.</p>
-    </article>
-</section>
-<aside>
-    <div class="div1"> <p>qc1</p></div>
-    <div class="div2"> <p>qc2</p></div>
-</aside>
 
 
-<footer>
-    <p>&copy; 2014 Monday Times. All rights reserved.</p>
-</footer>
 </body>
 </html>
