--- a/module3/07_websiste_layout_design/exercise/facebook/index.html
+++ b/module3/07_websiste_layout_design/exercise/facebook/index.html
@@ -96,14 +96,25 @@
                 <p>Quyền riêng tư  · Điều khoản  · Quảng cáo  · Lựa chọn quảng cáo   · Cookie  ·   · Facebook © 2021</p>
             </div>
         </div>
-        <div class="col-12 col-md-9 col-xl-4   position-relative translate-middle top-50 start-50 justify-content-center py-4  ">
+        <div class="col-12 col-md-9 col-xl-4   position-relative mx-auto justify-content-center py-4  ">
 
                 <div class="card col-12   mb-3 mw-100">
                     <div class="card-header bg-transparent ">Hồng Đức Anh  Maybe You Missed This F***king News
                     </div>
                     <div class="card-body text-success">
-                        <img src="img/188074053_4294532120597048_8529212117853636186_n.jpg" height="825"
+                        <p>Ina</p>
+                        <img src="img/188074053_4294532120597048_8529212117853636186_n.jpg" height="576"
                              width="843" class="card-img-top" alt="...">
+                    </div>
+                    <div class="row px-2">
+                        <div class="col-6 d-flex">
+                            <p><i class="far fa-thumbs-up"></i> 12k</p>
+                        </div>
+                        <div class="col-6 d-flex justify-content-end ">
+                            <p><a>1k bình luận</a> <a>3k chia sẽ</a></p>
+
+                        </div>
+
                     </div>
                     <div class="card-footer bg-transparent "><div class="row">
                         <div class="col-6 d-flex">
@@ -116,11 +127,24 @@
                     </div></div>
                 </div>
             <div class="card col-12   mb-3 mw-100">
-                <div class="card-header bg-transparent ">Hồng Đức Anh  Maybe You Missed This F***king News
+                <div class="card-header bg-transparent ">Bình TháiHololive Vietnam Fanclub
                 </div>
+
                 <div class="card-body text-success">
-                    <img src="img/188074053_4294532120597048_8529212117853636186_n.jpg" height="825"
+                    <p>#suisei
+                        Kịch bản khi suicopath cập bến HA</p>
+                    <img src="img/2.png" height="576"
                          width="843" class="card-img-top" alt="...">
+                    <div class="row px-2">
+                        <div class="col-6 d-flex">
+                            <p><i class="far fa-thumbs-up"></i> 12k</p>
+                        </div>
+                        <div class="col-6 d-flex justify-content-end ">
+                            <p><a>1k bình luận</a> <a>3k chia sẽ</a></p>
+
+                        </div>
+
+                    </div>
                 </div>
                 <div class="card-footer bg-transparent "><div class="row">
                     <div class="col-6 d-flex">
@@ -136,8 +160,19 @@
                 <div class="card-header bg-transparent ">Hồng Đức Anh  Maybe You Missed This F***king News
                 </div>
                 <div class="card-body text-success">
-                    <img src="img/188074053_4294532120597048_8529212117853636186_n.jpg" height="825"
+                    <img src="img/4.jpg" height="576"
                          width="843" class="card-img-top" alt="...">
+
+                </div>
+                <div class="row px-2">
+                    <div class="col-6 d-flex">
+                        <p><i class="far fa-thumbs-up"></i> 12k</p>
+                    </div>
+                    <div class="col-6 d-flex justify-content-end ">
+                        <p><a>1k bình luận</a> <a>3k chia sẽ</a></p>
+
+                    </div>
+
                 </div>
                 <div class="card-footer bg-transparent "><div class="row">
                     <div class="col-6 d-flex">
@@ -153,8 +188,18 @@
                 <div class="card-header bg-transparent ">Hồng Đức Anh  Maybe You Missed This F***king News
                 </div>
                 <div class="card-body text-success">
-                    <img src="img/188074053_4294532120597048_8529212117853636186_n.jpg" height="825"
+                    <img src="img/3.jpg" height="576"
                          width="843" class="card-img-top" alt="...">
+                </div>
+                <div class="row px-2">
+                    <div class="col-6 d-flex">
+                        <p><i class="far fa-thumbs-up"></i> 12k</p>
+                    </div>
+                    <div class="col-6 d-flex justify-content-end ">
+                        <p><a>1k bình luận</a> <a>3k chia sẽ</a></p>
+
+                    </div>
+
                 </div>
                 <div class="card-footer bg-transparent "><div class="row">
                     <div class="col-6 d-flex">
@@ -170,8 +215,18 @@
                 <div class="card-header bg-transparent ">Hồng Đức Anh  Maybe You Missed This F***king News
                 </div>
                 <div class="card-body text-success">
-                    <img src="img/188074053_4294532120597048_8529212117853636186_n.jpg" height="825"
+                    <img src="img/5.png" height="576"
                          width="843" class="card-img-top" alt="...">
+                </div>
+                <div class="row px-2">
+                    <div class="col-6 d-flex">
+                        <p><i class="far fa-thumbs-up"></i> 12k</p>
+                    </div>
+                    <div class="col-6 d-flex justify-content-end ">
+                        <p><a>1k bình luận</a> <a>3k chia sẽ</a></p>
+
+                    </div>
+
                 </div>
                 <div class="card-footer bg-transparent "><div class="row">
                     <div class="col-6 d-flex">
