--- a/module3/07_websiste_layout_design/exercise/facebook/index.html
+++ b/module3/07_websiste_layout_design/exercise/facebook/index.html
@@ -11,31 +11,9 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-<!--<header>-->
-<!--    <div class="logo menu-header "><img src="logo-facebook.png" height="50" width="50" alt=""/></div>-->
-<!--    <div class="seach-bar menu-header">-->
-<!--        <label>-->
-<!--            <input type="text" placeholder="Search..">-->
-<!--        </label>-->
-<!--    </div>-->
-<!--    <div class="menu-header  manipulation-header ">-->
-<!--        <div class="m" id="home"><a>home</a></div>-->
-<!--        <div class="m" id="friend"><a>friend</a></div>-->
-<!--        <div class="m" id="watch"><a>watch</a></div>-->
-<!--        <div class="m" id="Marketplace"><a>Marketplace</a></div>-->
-<!--        <div class="m" id="group"><a>group</a></div>-->
-<!--    </div>-->
-<!--    <div class="menu-header setting-header">-->
-<!--        <div class="n"></div>-->
-<!--        <div class="n"></div>-->
-<!--        <div class="n"></div>-->
-<!--        <div class="n"></div>-->
-<!--        <div class="n"><img src="download.png" height='100%' width="100%"/></div>-->
-<!--    </div>-->
-<!--</header>-->
 <div class="container-fluid ">
     <div class="row">
-        <div class="fixed-top p-3 bg-light">
+        <div class="fixed-top p-3 bg-light shadow ">
             <div class="d-flex justify-content-between">
                 <div class="d-flex " >
                     <i class="fab fa-facebook fa-lg logo"></i>
